--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 Django==1.11.21
 Pillow==4.3.0
+dj-database-url==0.5.0
 django-forms-bootstrap==3.1.0
+gunicorn==19.9.0
 olefile==0.46
+psycopg2==2.8.3
 pytz==2019.1
+whitenoise==4.1.2
